--- a/style.css
+++ b/style.css
@@ -1,9 +1,21 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 *{
     margin: 0%;
     padding: 0%;
 }
-.carousel {
-    width: 1000px;
-    margin: 0 auto;
-  }
+:root{
+    --color1: #A1A1A6;
+    --color2: #252526;
+    --color3: #747C8C;
+    --color4: #3C4959;
+    --color5: white;
+    --fonte1: arial, sans-serif;
+    --fonte2: 'Poppins', sans-serif;
+}
+body{
+    font-family: var(--fonte2);
+    background-image: linear-gradient(to top,#A1A1A6,white  );
+}
+header{
+    
+}
