--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 *{
     margin: 0%;
     padding: 0%;
@@ -11,11 +12,56 @@
     --color5: white;
     --fonte1: arial, sans-serif;
     --fonte2: 'Poppins', sans-serif;
+    --fonte3: 'Source Code Pro', monospace;
 }
 body{
     font-family: var(--fonte2);
-    background-image: linear-gradient(to top,#A1A1A6,white  );
+    background-color: white;
+    text-align: justify;
 }
 header{
-    
+    background-color: var(--color2);
+    height: 168px;
+    }
+header > h1{
+    text-align: center;
+    text-transform: uppercase;
+    font-family: var(--fonte2);
+    padding-bottom: 20px;
+    color: var(--color4);
 }
+header > nav > a{
+    color: var(--color4);
+    text-decoration: none;
+    padding-right: 20px;
+    margin-left: 20px;
+}
+header > nav > a:hover{
+    color: var(--color1);
+    background-color: var(--color4);
+    padding: 10px;
+    border-radius: 10px;
+    transition-delay: 0.5s;
+    transition-duration: 0.5s;
+}
+h2.subtitulos{
+    margin-left: 20px;
+    text-transform: uppercase;
+    color: var(--color4);
+    padding-top: 20px;
+    width: 500px;
+}
+div#ficha_tecnica{
+    background-color: lightgray;
+    height: 800px;
+}
+ul > li{
+    padding: 15px;
+    margin-left: 30px;
+    font-size: 15px;
+}
+img.predio{
+    float: right;
+    height: 800px;
+}
+
