--- a/style.css
+++ b/style.css
@@ -44,16 +44,20 @@ header > nav > a:hover{
     transition-delay: 0.5s;
     transition-duration: 0.5s;
 }
+main{
+   background-color: #252526;
+}
 h2.subtitulos{
-    margin-left: 20px;
+    margin-left: 50px;
     text-transform: uppercase;
     color: var(--color4);
     padding-top: 20px;
-    width: 500px;
+    width: 300px;
 }
 div#ficha_tecnica{
-    background-color: lightgray;
-    height: 800px;
+    background-color: white;
+    height: 780px;
+    padding-left: 30px;
 }
 ul > li{
     padding: 15px;
@@ -62,6 +66,55 @@ ul > li{
 }
 img.predio{
     float: right;
-    height: 800px;
+    height: auto;
+    max-width: 100%;
+}
+div#ficha_tecnica > p{
+    margin-left: 30px;
+    text-align: left;
+}
+.js .anime {
+	opacity: 0;
+	transform: translate3D(-50px, 0px, 0px);
 }
 
+.js .anime-init {
+	opacity: 1;
+	transform: translate3D(0px, 0px, 0px);
+	transition: .3s all ease;
+}
+#mouse {
+	display: block;
+	width: 22px;
+	height: 40px;
+	border-radius: 20px;
+	border: 4px solid #8844EE;
+	text-align: center;
+	position: fixed;
+	left: 0px;
+	right: 0px;
+	bottom: 20px;
+	margin: 0 auto;
+}
+
+#mouse::before {
+	content: '';
+	display: inline-block;
+	width: 4px;
+	height: 8px;
+	position: relative;
+	border-radius: 4px;
+	background: #8844EE;
+	animation-name: mouse;
+  animation-duration: .7s;
+	animation-iteration-count: infinite;
+}
+
+@keyframes mouse {
+	from {
+		top: 0px;
+	}
+  to {
+		top: 6px;
+	}
+}
