--- a/style.css
+++ b/style.css
@@ -92,9 +92,14 @@ div.plantas_apt{
 .img_planta{
     max-width: 400px;
     height: 400px;
-    padding-left: 80px;
-    margin: 10px;
-    border: 2px solid black;
+    box-shadow: 1px 1px 10px black;
+    margin-left: 80px;
+    margin-top: 17px;
+}
+.img_planta:hover{
+    -moz-transform: scale(1.1);
+	-webkit-transform: scale(1.1);
+	transform: scale(1.1);
 }
 .js .anime {
 	opacity: 0;
